// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modus-wc-file-dropzone should display default dragging message when feedback type is dragging without message 1`] = `
<modus-wc-file-dropzone file-dragged-over-instructions="Drop files here now">
  <!---->
  <div class="modus-wc-file-dropzone">
    <input class="file-input modus-wc-file-input" type="file">
    <div aria-disabled="false" class="dragging-over dropzone-content" role="button" tabindex="0">
      <div class="default-content">
        <modus-wc-icon class="upload-icon" name="cloud_upload" size="lg" variant="solid"></modus-wc-icon>
        <span>
          Drop files here now
        </span>
        <div style="display: none;"></div>
      </div>
    </div>
  </div>
</modus-wc-file-dropzone>
`;

exports[`modus-wc-file-dropzone should display default dragging message when feedback type is dragging without message or drag-over instructions 1`] = `
<modus-wc-file-dropzone>
  <!---->
  <div class="modus-wc-file-dropzone">
    <input class="file-input modus-wc-file-input" type="file">
    <div aria-disabled="false" class="dragging-over dropzone-content" role="button" tabindex="0">
      <div class="default-content">
        <modus-wc-icon class="upload-icon" name="cloud_upload" size="lg" variant="solid"></modus-wc-icon>
        <span>
          Drop files here
        </span>
        <div style="display: none;"></div>
      </div>
    </div>
  </div>
</modus-wc-file-dropzone>
`;

exports[`modus-wc-file-dropzone should display default error message when feedback type is error without message 1`] = `
<modus-wc-file-dropzone>
  <!---->
  <div class="modus-wc-file-dropzone">
    <input class="file-input modus-wc-file-input" type="file">
    <div aria-disabled="false" class="dropzone-content invalid-file-type" role="button" tabindex="0">
      <div class="default-content">
        <modus-wc-icon class="error-icon" name="alert" size="lg" variant="solid"></modus-wc-icon>
        <span>
          An error occurred
        </span>
        <div style="display: none;"></div>
      </div>
    </div>
  </div>
</modus-wc-file-dropzone>
`;

exports[`modus-wc-file-dropzone should display default success message when feedback type is success without message 1`] = `
<modus-wc-file-dropzone success-message="Files uploaded successfully">
  <!---->
  <div class="modus-wc-file-dropzone">
    <input class="file-input modus-wc-file-input" type="file">
    <div aria-disabled="false" class="dropzone-content upload-success" role="button" tabindex="0">
      <div class="default-content">
        <modus-wc-icon class="success-icon" name="check_circle" size="lg" variant="solid"></modus-wc-icon>
        <span>
          Files uploaded successfully
        </span>
        <div style="display: none;"></div>
      </div>
    </div>
  </div>
</modus-wc-file-dropzone>
`;

exports[`modus-wc-file-dropzone should display default success message when feedback type is success without message or success-message prop 1`] = `
<modus-wc-file-dropzone>
  <!---->
  <div class="modus-wc-file-dropzone">
    <input class="file-input modus-wc-file-input" type="file">
    <div aria-disabled="false" class="dropzone-content upload-success" role="button" tabindex="0">
      <div class="default-content">
        <modus-wc-icon class="success-icon" name="check_circle" size="lg" variant="solid"></modus-wc-icon>
        <span>
          Successfully uploaded
        </span>
        <div style="display: none;"></div>
      </div>
    </div>
  </div>
</modus-wc-file-dropzone>
`;

exports[`modus-wc-file-dropzone should display dragging state when feedback type is dragging 1`] = `
<modus-wc-file-dropzone>
  <!---->
  <div class="modus-wc-file-dropzone">
    <input class="file-input modus-wc-file-input" type="file">
    <div aria-disabled="false" class="dragging-over dropzone-content" role="button" tabindex="0">
      <div class="default-content">
        <modus-wc-icon class="upload-icon" name="cloud_upload" size="lg" variant="solid"></modus-wc-icon>
        <span>
          Release to upload
        </span>
        <div style="display: none;"></div>
      </div>
    </div>
  </div>
</modus-wc-file-dropzone>
`;

exports[`modus-wc-file-dropzone should display error state when feedback type is error 1`] = `
<modus-wc-file-dropzone>
  <!---->
  <div class="modus-wc-file-dropzone">
    <input class="file-input modus-wc-file-input" type="file">
    <div aria-disabled="false" class="dropzone-content invalid-file-type" role="button" tabindex="0">
      <div class="default-content">
        <modus-wc-icon class="error-icon" name="alert" size="lg" variant="solid"></modus-wc-icon>
        <span>
          Upload failed
        </span>
        <div style="display: none;"></div>
      </div>
    </div>
  </div>
</modus-wc-file-dropzone>
`;

exports[`modus-wc-file-dropzone should display success state when feedback type is success 1`] = `
<modus-wc-file-dropzone>
  <!---->
  <div class="modus-wc-file-dropzone">
    <input class="file-input modus-wc-file-input" type="file">
    <div aria-disabled="false" class="dropzone-content upload-success" role="button" tabindex="0">
      <div class="default-content">
        <modus-wc-icon class="success-icon" name="check_circle" size="lg" variant="solid"></modus-wc-icon>
        <span>
          Upload complete!
        </span>
        <div style="display: none;"></div>
      </div>
    </div>
  </div>
</modus-wc-file-dropzone>
`;

exports[`modus-wc-file-dropzone should prioritize actual drag over feedback error state 1`] = `
<modus-wc-file-dropzone>
  <!---->
  <div class="modus-wc-file-dropzone">
    <input class="file-input modus-wc-file-input" type="file">
    <div aria-disabled="false" class="dragging-over dropzone-content" role="button" tabindex="0">
      <div class="default-content">
        <modus-wc-icon class="upload-icon" name="cloud_upload" size="lg" variant="solid"></modus-wc-icon>
        <span>
          Drop files here
        </span>
        <div style="display: none;"></div>
      </div>
    </div>
  </div>
</modus-wc-file-dropzone>
`;

exports[`modus-wc-file-dropzone should prioritize feedback over internal validation state 1`] = `
<modus-wc-file-dropzone>
  <!---->
  <div class="modus-wc-file-dropzone">
    <input class="file-input modus-wc-file-input" type="file">
    <div aria-disabled="false" class="dropzone-content upload-success" role="button" tabindex="0">
      <div class="default-content">
        <modus-wc-icon class="success-icon" name="check_circle" size="lg" variant="solid"></modus-wc-icon>
        <span>
          Override success
        </span>
        <div style="display: none;"></div>
      </div>
    </div>
  </div>
</modus-wc-file-dropzone>
`;

exports[`modus-wc-file-dropzone should render with accept-file-types prop 1`] = `
<modus-wc-file-dropzone accept-file-types=".jpg,.png,image/*">
  <!---->
  <div class="modus-wc-file-dropzone">
    <input accept=".jpg,.png,image/*" class="file-input modus-wc-file-input" type="file">
    <div aria-disabled="false" class="dropzone-content" role="button" tabindex="0">
      <div class="default-content">
        <modus-wc-icon class="upload-icon" name="cloud_upload" size="lg" variant="solid"></modus-wc-icon>
        <span></span>
        <div style="display: block;"></div>
      </div>
    </div>
  </div>
</modus-wc-file-dropzone>
`;

exports[`modus-wc-file-dropzone should render with custom drag-over instructions 1`] = `
<modus-wc-file-dropzone file-dragged-over-instructions="Release to upload">
  <!---->
  <div class="modus-wc-file-dropzone">
    <input class="file-input modus-wc-file-input" type="file">
    <div aria-disabled="false" class="dropzone-content" role="button" tabindex="0">
      <div class="default-content">
        <modus-wc-icon class="upload-icon" name="cloud_upload" size="lg" variant="solid"></modus-wc-icon>
        <span></span>
        <div style="display: block;"></div>
      </div>
    </div>
  </div>
</modus-wc-file-dropzone>
`;

exports[`modus-wc-file-dropzone should render with custom instructions 1`] = `
<modus-wc-file-dropzone instructions="Upload documents here">
  <!---->
  <div class="modus-wc-file-dropzone">
    <input class="file-input modus-wc-file-input" type="file">
    <div aria-disabled="false" class="dropzone-content" role="button" tabindex="0">
      <div class="default-content">
        <modus-wc-icon class="upload-icon" name="cloud_upload" size="lg" variant="solid"></modus-wc-icon>
        <span>
          Upload documents here
        </span>
        <div style="display: block;"></div>
      </div>
    </div>
  </div>
</modus-wc-file-dropzone>
`;

exports[`modus-wc-file-dropzone should render with default props 1`] = `
<modus-wc-file-dropzone>
  <!---->
  <div class="modus-wc-file-dropzone">
    <input class="file-input modus-wc-file-input" type="file">
    <div aria-disabled="false" class="dropzone-content" role="button" tabindex="0">
      <div class="default-content">
        <modus-wc-icon class="upload-icon" name="cloud_upload" size="lg" variant="solid"></modus-wc-icon>
        <span></span>
        <div style="display: block;"></div>
      </div>
    </div>
  </div>
</modus-wc-file-dropzone>
`;

exports[`modus-wc-file-dropzone should render with disabled prop 1`] = `
<modus-wc-file-dropzone disabled="">
  <!---->
  <div class="modus-wc-file-dropzone">
    <input class="file-input file-input-disabled modus-wc-file-input" disabled="" type="file">
    <div aria-disabled="true" class="dropzone-content" role="button" tabindex="-1">
      <div class="default-content">
        <modus-wc-icon class="upload-icon" name="cloud_upload" size="lg" variant="solid"></modus-wc-icon>
        <span></span>
        <div style="display: none;"></div>
      </div>
    </div>
  </div>
</modus-wc-file-dropzone>
`;
